# cmake-presets

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/cmake_presets/: __init__.py  __main__.py  cli.py  gcc.py  msvc.py  oneapi.py  presets.py  toolkit.py  user_presets.json  util.py
tests/: __init__.py  test_env.py  test_generate.py  test_toolkits.py  test_versions.py  user_presets.json
